--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	.modify_this{
 		color: pink;
 		font-weight: bold;
-		background-color: lavender;
+		background-color: purple;
 	}
 	.modify_this_too{
-		color: black;
+		color: black;	
 	}
 </style>
 </head>
