--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 	.modify_this{
 		color: pink;
 		font-weight: bold;
-		background-color: purple;
+		background-color:orange;
 	}
 	.modify_this_too{
-<<<<<<< HEAD
-		color: black;	
-=======
 		color: hotpink;
->>>>>>> 22bdcf64d2d389b884f7a05e1f8ac6196037b9bd
 	}
 </style>
 </head>
